Removed obsolete drinks code, edited jumbotron txt

--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
                     </div>
                     <div>
                         <ul class="list">
-                            <li class="list-item">Our Menu</li>
-                            <li class="list-item">Maps</li>
                             <li class="list-item">About</li>
                             <li class="list-item">Contact</li>
                         </ul>
@@ -48,7 +46,8 @@
             </section>
             <!--Jumbotron with animation-->
             <div class="jumbotron jumbotron-fluid">
-                <h1 class="display-1 animated tada">Food & Takeaway</h1>
+                <h1>Generate your perfect date!</h1>
+                <h2>Placeholder explanation text</h2>
             </div>
             <!--Bootstrap container and rows-->
             <div class="container">
@@ -79,19 +78,6 @@
                     </div>
                     <!--Empty div-->
                     <div class="col-lg-2"></div>
-                    <!--Drink recipe card displaying the cocktail name, image, units of measure, and ingredients-->
-                    <div class="col-lg-5" id="drinkcard">
-                        <div class="drinkCard remove">
-                            <img src="..." class="drinkCard-img-top" alt="Cocktail">
-                            <div class="drinkCard-body">
-                                <br>
-                                <h5 class="drinkCard-title">Card title</h5>
-                                <p class="drinkCard-text"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
             <!--Linking jquery and script file-->
             <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
             <script src="js/script.js"></script>
