Removed obsolete footer links, minor changes

--- a/index.html
+++ b/index.html
@@ -44,23 +44,27 @@
                     </div>
                 </nav>
             </section>
-            <!--Jumbotron with animation-->
+            <!--Jumbotron-->
             <div class="jumbotron jumbotron-fluid">
                 <h1>Generate your perfect date!</h1>
                 <h2>Placeholder explanation text</h2>
             </div>
-            <!--Bootstrap container and rows-->
+
+            <!--Movies and Food Section-->
+            
             <div class="container">
                 <div class="row" id="container-rows">
+
                     <!--Food radio buttons-->
-                    <div class="col-lg-5 " id="foodborder">
+                    <div class="col-lg-5 " id="Movies">
                         <h3 class="selections">Movies</h3>
                     </div>
                     <!--Empty div-->
                     <div class="col-lg-2"></div>
+
                     <!--Drink radio buttons-->
-                    <div class="col-lg-5 " id="drinkborder">
-                        <h3 class="selections">Receipes</h3>
+                    <div class="col-lg-5 " id="Food">
+                        <h3 class="selections">Recipes</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -76,11 +80,9 @@
                             </div>
                         </div>
                     </div>
-                    <!--Empty div-->
-                    <div class="col-lg-2"></div>
-            <!--Linking jquery and script file-->
-            <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-            <script src="js/script.js"></script>
+
+
+
             <!--Team Members Section-->
             <section>
                 <div class="container bg-secondary" id="project-team">
@@ -122,26 +124,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 h-100 text-center mx-auto" id="links">
-                            <ul class="list-inline mb-0">
-                                <li class="list-inline-item mr-3" id="linkedin">
-                                    <a href="https://www.linkedin.com" target="_blank">
-                                        <i class="fab fa-linkedin fa-3x fa-fw"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item mr-3" id="twitter">
-                                    <a href="https://www.twitter.com" target="_blank">
-                                        <i class="fab fa-twitter-square fa-3x fa-fw"></i>
-                                    </a>
-                                </li>
-                                <li class="list-inline-item" id="github">
-                                    <a href="https://www.github.com" target="_blank">
-                                        <i class="fab fa-github fa-3x fa-fw"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                            <br>
                             <p class="text-muted small mb-4 mb-lg-0" id="bottom-section">&copy; Front End Web
-                                Development Project by Farha, Ewa & Max 2023 !!</p>
+                                Development Project by Farha, Ewa & Max 2023!</p>
                             <br>
                         </div>
                     </div>
@@ -149,5 +133,9 @@
                 <!-- /.container -->
             </footer>
             <!-- end of Footer -->
+
+            <!--Linking jquery and script file-->
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+            <script src="js/script.js"></script>
     </body>
 </html>
