--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
                     <!--Food radio buttons-->
                     <div class="col-lg-5 " id="Movies">
-                        <h3 class="selections">Movies</h3>
+                        <h3 class="selections">Generate a Movie!</h3>
                     </div>
                     <!--Empty div-->
                     <div class="col-lg-2"></div>
 
                     <!--Drink radio buttons-->
                     <div class="col-lg-5 " id="Food">
-                        <h3 class="selections">Recipes</h3>
+                        <h3 class="selections">Generate a Recipe!</h3>
                     </div>
                 </div>
                 <div class="row">
