added logo image.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!--Application title-->
     <title>Food-Takeaway Project</title>
@@ -165,7 +165,7 @@
 
 
     <!--Linking jquery and script file-->
-    <script src="recipe.js"></script>
+    <script src="js/recipe.js"></script>
 </body>
 
 </html>
