Updated movie js & movie styles

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <!--Ewa Div Movies Search-->
 
         <div class="container" id="movie-container">
+            <h2 id="movies-heading"></h2>
             <div id="movies-list">
                 <!-- Render Movies here-->
             </div>
