--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
 
         <div class="container" id="prev-searches">
             <h4>Your Previous Searches</h4>
+            <button id="history-btn">View History</button>
+            <div id="history-list" class="hidden"></div>
         </div>
 
         <!--About Section-->
@@ -167,6 +169,7 @@
         <!--Linking jquery and script file-->
         <script src="js/recipe.js"></script>
         <script src="js/movie.js"></script>
+        <script src="js/search-history.js"></script>
 
         
 
