--- a/index.html
+++ b/index.html
@@ -24,154 +24,201 @@
 
 <body>
     <div class="">
+        <!--Navbar-->
         <section aria-label="navbar">
-            <!--Navbar-->
-            <section aria-label="navbar">
-                <nav class="navbar">
+
+            <!-- navbar-section -->
+            <!-- Navigation -->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+                <div class="container">
                     <div>
-                        <img class="logo" src="images/img-1.png" alt="logo" class="logo"/>
+                        <img class="logo" src="images/img-1.png" alt="logo" class="logo" />
                     </div>
-                    <div>
-                        <ul class="list">
-                            <li class="list-item">About</li>
-                            <li class="list-item">Contact</li>
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#title">Welcome
+                                    <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact-details">Contact</a>
+                            </li>
                         </ul>
                     </div>
-                </nav>
-            </section>
-        <!--Jumbotron with animation-->
-        <div class="jumbotron jumbotron-fluid">
-            <h1>Generate your perfect date!</h1>
-            <h2>Placeholder explanation text</h2>
-        </div>
+                </div>
+            </nav>
+            <!-- end of navbar-section -->
 
-        <!--Search Bar-->
-        <div>
-            <div class="meal-wrapper">
 
-                <!-- Search -->
-                <div class="search">
-                    <h2 class="first-title">Find Meals & Movies For Ingredients</h2>
-                    <!-- Search-box -->
-                    <div class="meal-search-box">
-                        <input type="text" class="search-control" placeholder="Enter an ingredient" id="search-input">
-                        <button type="submit" class="search-btn btn" id="search-btn">
-                            <i class="fas fa-search"></i>
-                        </button>
+            <!--Jumbotron with animation-->
+            <div class="jumbotron jumbotron-fluid">
+                <h1 class="jumbotron-title" id="title">Foodie Movies Bucket List: Cooking & Food Films You Need to Watch
+                </h1>
+                <p class="jumbotron-description">Not only are movies revolving around food an excellent watch – perhaps
+                    over some wine – for their
+                    beautiful food aesthetics and usually fun storylines, but they can be a great motivator for trying
+                    out new dishes in the kitchen. Or perhaps to start cooking in the first place! Below I’ve put
+                    together a list of foodie movies that are guaranteed to get you hungry on the spot and hopefully
+                    inspire you to attempt recreating those scrumptious dishes at home. How many of these films have you
+                    seen?</p>
+                <img class="jumbotron-image" src="images/img-2.jpeg" alt="food-movies description">
+            </div>
+
+            <!--Search Bar-->
+            <div>
+                <div class="meal-wrapper" id="search-bar">
+
+                    <!-- Search -->
+                    <div class="search">
+                        <h2 class="first-title">Find Meals & Movies For Ingredients</h2>
+                        <!-- Search-box -->
+                        <div class="meal-search-box">
+                            <input type="text" class="search-control" placeholder="Enter an ingredient"
+                                id="search-input">
+                            <button type="submit" class="search-btn btn" id="search-btn">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!--Ewa Div Movies Search-->
+            <!--Ewa Div Movies Search-->
+            <div class="container" id="movie-container">
+                <h2 id="movies-heading"></h2>
+                <div id="movies-list">
+                    <!-- Render Movies here-->
+                </div>
+            </div>
+            <!--End Of Ewa Div Movies Search-->
 
-        <div class="container" id="movie-container">
-            <h2 id="movies-heading"></h2>
-            <div id="movies-list">
-                <!-- Render Movies here-->
+            <!--Farha Div Receipe Search-->
+            <div class="container" id="recipe-container">
+                <h2 id="recipe-heading"></h2>
+                <!-- meal-result -->
+                <div class="meal-result">
+                    <h2 class="second-title"></h2>
+                    <div id="meal"></div>
+                </div>
+
+                <!-- meal-details -->
+                <div class="meal-details">
+                    <!-- recipe close btn -->
+                    <button type="button" class="btn recipe-close-btn" id="recipe-close-btn">
+                        <i class="fas fa-times"></i>
+                    </button>
+
+                    <!-- meal content -->
+                    <div class="meal-details-content"></div>
+                </div>
             </div>
 
-        </div>
+            <!--End Of Farha Div Recipe Search-->
 
-        <!--End Of Ewa Div Movies Search-->
-
-
-        <!--Farha Div Receipe Search-->
-        <div class="container">
-
-            <!-- meal-result -->
-            <div class="meal-result">
-                <h2 class="second-title">Search Results:</h2>
-                <div id="meal"></div>
+            <!--Previous-searches Section-->
+            <div class="container" id="prev-searches">
+                <h4 class="prv-search">Your Previous Searches</h4>
+                <button id="history-btn">View History</button>
+                <div id="history-list" class="hidden"></div>
             </div>
 
-            <!-- meal-details -->
-            <div class="meal-details">
-                <!-- recipe close btn -->
-                <button type="button" class="btn recipe-close-btn" id="recipe-close-btn">
-                    <i class="fas fa-times"></i>
-                </button>
+            <!--About Section-->
+            <div class="about-section" id="about">
+                <h2 class="about-title">The most iconic food moments in movie history, and the recipes to recreate
+                    them !!
+                </h2>
+                <p class="about-description">Ever felt your stomach rumbling at the sight on an on-screen meal? Whet
+                    your appetite with iconic
+                    food moments from cinema history – then recreate them with these delicious recipes.
 
-                <!-- meal content -->
-                <div class="meal-details-content"></div>
+                    Picture the scene: you’re tucked up on the sofa, watching a film. Bowl of popcorn in hand, you sit
+                    transfixed as the plot picks up pace. Suddenly, a plate of food comes into view, so mouthwatering
+                    that its aroma somehow magically wafts its way through the screen towards you. Like a cartoon
+                    character with a one-track mind, all that matters in that moment is devouring the exact same thing.
+
+                    If you’re nodding your head vigorously, then you’ve come to the right place. Food has a rich history
+                    on the silver screen, and can be a powerful means of storytelling without anyone having to utter a
+                    word. A beautiful meal can seal a friendship or rekindle a love interest; although, equally,
+                    sometimes it’s just a great cinematic moment that deserves appreciation.</p>
             </div>
-        </div>
 
-        <!--End Of Farha Div Recipe Search-->
+            <!--Team Members Section-->
+            <section>
+                <div class="container bg-secondary" id="project-team">
+                    <div class="col-lg-7 order-lg-1">
+                        <div class="p-5">
+                            <h2 class="team">Project Team!</h2>
+                            <div class="main-container">
+                                <!-- Team Members Name-->
+                                <div class="row">
 
+                                    <!--Farha-->
+                                    <div class="col-lg-4">
+                                        <img class="img-fluid rounded-circle" src="images/farha.jpg" alt="">
+                                        <h2 class="heading">Farha</h2>
+                                        <a class="btn btn-primary" id="contact-details"
+                                            href="https://www.linkedin.com/in/farha-khan-b74340208/"
+                                            target="_blank">contact details
+                                            >></a>
+                                    </div>
 
-        <div class="container" id="prev-searches">
-            <h4>Your Previous Searches</h4>
-            <button id="history-btn">View History</button>
-            <div id="history-list" class="hidden"></div>
-        </div>
+                                    <!--Ewa-->
+                                    <div class="col-lg-4">
+                                        <img class="img-fluid rounded-circle" src="images/ewa.jpg" alt="">
+                                        <h2 class="heading">Ewa</h2>
+                                        <a class="btn btn-primary" id="contact-details"
+                                            href="https://www.linkedin.com/in/ewa-g%C3%B3rka-9003b2167/"
+                                            target="_blank">contact
+                                            details >></a>
+                                    </div>
 
-        <!--About Section-->
-        <div class="container" id="about">
-            <h4>About</h4>
-        </div>
-
-        <!--Team Members Section-->
-        <section>
-            <div class="container bg-secondary" id="project-team">
-                <div class="col-lg-7 order-lg-1">
-                    <div class="p-5">
-                        <h2 class="team">Project Team!</h2>
-                        <div class="main-container">
-                            <!-- Team Members Name-->
-                            <div class="row">
-
-                                <!--Farha-->
-                                <div class="col-lg-4">
-                                    <img class="img-fluid rounded-circle" src="images/farha.jpg" alt="">
-                                    <h2 class="heading">Farha</h2>
-                                    <a class="btn btn-primary" href="#">view details >></a>
-                                </div>
-
-                                <!--Max-->
-                                <div class="col-lg-4">
-                                    <img class="img-fluid rounded-circle" src="images/max.jpeg" alt="">
-                                    <h2 class="heading">Max</h2>
-                                    <a class="btn btn-primary" href="#">view details >></a>
-                                </div>
-
-                                <!--Ewa-->
-                                <div class="col-lg-4">
-                                    <img class="img-fluid rounded-circle" src="images/ewa.jpeg" alt="">
-                                    <h2 class="heading">Ewa</h2>
-                                    <a class="btn btn-primary" href="#">view details >></a>
+                                    <!--Max-->
+                                    <div class="col-lg-4">
+                                        <img class="img-fluid rounded-circle" src="images/max.jpg" alt="">
+                                        <h2 class="heading">Max</h2>
+                                        <a class="btn btn-primary" id="contact-details"
+                                            href="https://uk.linkedin.com/in/maxwell-sparrey-7a756b269"
+                                            target="_blank">contact
+                                            details >></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- /.container -->
-        <br>
-        <br>
-        <!-- Footer -->
-        <footer class="footer bg-light" id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 h-100 text-center mx-auto" id="links">
-                        <p class="text-muted small mb-4 mb-lg-0" id="bottom-section">&copy; Front End Web Development Project by Farha, Ewa & Max 2023!</p>
-                        <br>
+            </section>
+            <!--End Of Team Members Section-->
+            <br>
+            <br>
+
+            <!-- Footer Section -->
+            <footer class="footer bg-light" id="footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 h-100 text-center mx-auto">
+                            <p class="text-muted small mb-4 mb-lg-0" id="bottom-section">&copy; Front End Web
+                                Development Project by Farha, Ewa & Max **2023**</p>
+                            <br>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!-- /.container -->
-        </footer>
-        <!-- end of Footer -->
+                <!-- /.container -->
+            </footer>
+            <!-- End Of Footer Section-->
 
-        <!-- jQuery -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!--Linking jquery and script file-->
-        <script src="js/recipe.js"></script>
-        <script src="js/movie.js"></script>
-        <script src="js/search-history.js"></script>
+            <!-- jQuery -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+            <!--Linking jquery and script file-->
+            <script src="js/recipe.js"></script>
+            <script src="js/movie.js"></script>
+            <script src="js/search-history.js"></script>
 
-        
+
 
 </body>
 
