added local storage for recipe.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="container" id="recipe-container">
                 <h2 id="recipe-heading"></h2>
                 <!-- meal-result -->
-                <div class="meal-result">
+                <div class="meal-result" id="recipe-list">
                     <h2 class="second-title"></h2>
                     <div id="meal"></div>
                 </div>
