--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
 
         <!--Ewa Div Movies Search-->
-        div class="container" id="movie-container">
+        <div class="container" id="movie-container">
             <h2 id="movies-heading"></h2>
             <div id="movies-list">
                 <!-- Render Movies here-->
@@ -205,13 +205,8 @@
         <!-- Footer Section -->
         <footer class="footer bg-light" id="footer">
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 h-100 text-center mx-auto">
-                        <p class="text-muted small mb-4 mb-lg-0" id="bottom-section">&copy; Front End Web
-                            Development Project by Farha, Ewa & Max **2023**</p>
-                        <br>
-                    </div>
-                </div>
+                <p class="text-muted small mb-4 mb-lg-0" id="bottom-section">&copy; Front End Web
+                    Development Project by Farha, Ewa & Max **2023**</p>
             </div>
             <!-- /.container -->
         </footer>
